k8s-configs/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: desbroces-web-lb
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: desbroces-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
