k8s-configs/ingress-www.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: desbroces-www
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: www.desbroces-pontevedra.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: desbroces-web-lb
            port:
              number: 80
  tls:
  - hosts:
    - www.desbroces-pontevedra.fun
    secretName: desbroces-www-tls
